apps/speedtest-tracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: speedtest.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  number: 8765
